@@ -93,7 +93,8 @@ class GeneralPlot(object):
         self.daynight_day_color     = weeplot.utilities.tobgr(config_dict.get('daynight_day_color', '0xffffff'))
         self.daynight_night_color   = weeplot.utilities.tobgr(config_dict.get('daynight_night_color', '0xf0f0f0'))
         self.daynight_edge_color    = weeplot.utilities.tobgr(config_dict.get('daynight_edge_color', '0xefefef'))
-            
+        self.daynight_gradient      = int(config_dict.get('daynight_gradient', 10))
+
     def setBottomLabel(self, bottom_label):
         """Set the label to be put at the bottom of the plot.
         
@@ -209,9 +210,37 @@ class GeneralPlot(object):
             xleft = x
             color = self.daynight_night_color if color == self.daynight_day_color else self.daynight_day_color
         sdraw.rectangle(((xleft,self.yscale[0]),(self.xscale[1],self.yscale[1])), fill=color)
+        # draw gradients
+        if self.daynight_gradient:
+            nfade = self.daynight_gradient
+            if first == 'day':
+                color1 = self.daynight_day_color
+                color2 = self.daynight_night_color
+            else:
+                color1 = self.daynight_night_color
+                color2 = self.daynight_day_color
+            # gradient is longer at the poles than the equator
+            d = 120 + 300 * (1 - (90.0 - abs(self.latitude)) / 90.0)
+            for i in range(len(transitions)):
+                last = self.xscale[0] if i == 0 else transitions[i-1]
+                next = transitions[i+1] if i < len(transitions)-1 else self.xscale[1]
+                for z in range(1,nfade):
+                    c = blend_hls(color2, color1, float(z)/float(nfade))
+                    rgbc = int2rgbstr(c)
+                    x1 = transitions[i]-d*(nfade+1)/2+d*z
+                    if last < x1 < next: # ensure gradients do not clash
+                        sdraw.rectangle(((x1, self.yscale[0]),
+                                         (x1+d, self.yscale[1])),
+                                        fill=rgbc)
+                if color1 == self.daynight_day_color:
+                    color1 = self.daynight_night_color
+                    color2 = self.daynight_day_color
+                else:
+                    color1 = self.daynight_day_color
+                    color2 = self.daynight_night_color
+        # draw the rise/set transitions
         for x in transitions:
             sdraw.line((x,x),(self.yscale[0],self.yscale[1]), fill=self.daynight_edge_color)
-        
 
     def _renderXAxes(self, sdraw):
         """Draws the x axis and vertical constant-x lines, as well as the labels.
